# rag-quality-lab

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: chunking-strategies.md  metrics-reference.md  results-interpretation.md
rag_quality_lab/: __init__.py  config.py  models.py  pipeline.py  reporting.py
rag_quality_lab/chunkers/: __init__.py  base.py  fixed_size.py  recursive.py  semantic.py
rag_quality_lab/embedders/: __init__.py  base.py  openai.py
rag_quality_lab/evaluators/: __init__.py  base.py  llm_judge.py  metrics.py
rag_quality_lab/retrievers/: __init__.py  base.py  dense.py  hybrid.py  sparse.py
results/: README.md
scripts/: generate_report.py  ingest.py  init_db.py  run_benchmark.py
tests/: conftest.py  test_chunkers.py  test_metrics.py  test_pipeline.py
